--- a/src/Frames/index.form
+++ b/src/Frames/index.form
@@ -159,7 +159,10 @@
                   <Component id="panelJugadas" max="32767" attributes="0"/>
               </Group>
               <Component id="panelAyuda" max="32767" attributes="0"/>
-              <Component id="panelPrograma" alignment="0" max="32767" attributes="0"/>
+              <Group type="102" alignment="0" attributes="0">
+                  <Component id="panelPrograma" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -1503,12 +1506,12 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jPanel1" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="c8am" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="lbAvisoLt8am" max="32767" attributes="0"/>
+                              <Component id="lbAvisoLt8am" min="-2" pref="234" max="-2" attributes="0"/>
                           </Group>
                           <Component id="c9am" max="32767" attributes="0"/>
                           <Component id="c10am" alignment="0" pref="317" max="32767" attributes="0"/>
@@ -1522,7 +1525,7 @@
                           <Component id="c6pm" alignment="0" max="32767" attributes="0"/>
                           <Component id="c7pm" alignment="0" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -2055,7 +2058,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnRepetir" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                      <Component id="lbMensajeSistema" max="32767" attributes="0"/>
+                      <Component id="lbMensajeSistema" pref="291" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -2227,7 +2230,7 @@
                       <Component id="checkLotto" min="-2" pref="160" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="checkGranjita" min="-2" pref="160" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="433" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
