--- a/src/Frames/index.form
+++ b/src/Frames/index.form
@@ -25,6 +25,24 @@
         </MenuItem>
       </SubComponents>
     </Container>
+    <Container class="rojerusan.RSMenuBar" name="rSMenuBar1">
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
+        <Property name="useNullLayout" type="boolean" value="true"/>
+      </Layout>
+      <SubComponents>
+        <Menu class="javax.swing.JMenu" name="jMenu2">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="File"/>
+          </Properties>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="jMenu3">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Edit"/>
+          </Properties>
+        </Menu>
+      </SubComponents>
+    </Container>
     <Menu class="javax.swing.JMenuBar" name="menuMain">
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="archivoMenu">
