--- a/src/Frames/RepetirTicket.form
+++ b/src/Frames/RepetirTicket.form
@@ -64,9 +64,7 @@
                   <Component id="txtNumTicket" min="-2" pref="142" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnBuscar" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="btnRepetir" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="45" max="32767" attributes="0"/>
+                  <EmptySpace pref="62" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -81,7 +79,6 @@
                       <Component id="jLabel3" alignment="1" max="32767" attributes="0"/>
                       <Component id="txtNumTicket" alignment="0" max="32767" attributes="0"/>
                       <Component id="btnBuscar" max="32767" attributes="0"/>
-                      <Component id="btnRepetir" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jSeparator1" min="-2" pref="15" max="-2" attributes="0"/>
@@ -167,18 +164,10 @@
         </Container>
         <Component class="javax.swing.JButton" name="btnBuscar">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Buscar"/>
+            <Property name="text" type="java.lang.String" value="Repetir Ticket (Enter)"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuscarActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JButton" name="btnRepetir">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Repetir"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRepetirActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
